--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@
 /*-----Blogs---*/
 #blog
 {
-	background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url('../images/image4.jpg');
+	background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url('image4.jpg');
 	background-size: cover;
 	background-position: center;
 	color: #efefef !important;
@@ -259,7 +259,7 @@ h1::after
 /*------Support-----*/
 #support
 {
-	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('../images/image3.jpg');
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('image3.jpg');
 	background-size: cover;
 	background-position: center;
 	color: #fff;
